--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -776,7 +776,7 @@
       <!--Правая вкладка - ЧАТ-->
       <div class="overview__chat" id="overview__chat">
         {% if not player.chat_ban %}
-        <div class="overview__chat-wrapper">
+        <div class="overview__chat-wrapper gui_help" data-helpid="overview chat block">
           <!--Сообщения-->
 
             <!--в будущем использовать это (LANGUAGE_CODE) как ИД чата-->
