--- a/player/templates/player/redesign/player_help.html
+++ b/player/templates/player/redesign/player_help.html
@@ -14,3 +14,5 @@
 'overview event block': "Это особое событие, проходящее в мире Wild Politics прямо сейчас. Успейте принять участие!",
 
 'overview pres_elections block': "Выборы президента, проходящие в стране вашего местонахождения",
+
+'overview chat block': "Общий чат, где вы можете пообщаться со всеми игроками",
