Закон о военном положении

--- a/bill/templates/state/redesign/drafts/construction.html
+++ b/bill/templates/state/redesign/drafts/construction.html
@@ -119,31 +119,32 @@
         });
     });
     </script>
-        {% with regions=data|dict_key:'regions' %}
-		<div class="ct__selectWithImage">
+    {% with regions=data|dict_key:'regions' %}
+    {% if regions %}
+    <div class="ct__selectWithImage">
+        {% for region in regions %}
+        {% if forloop.counter0 == 0 %}
+        <div class="ct__selectWithImage-selected" id="construction_default_region" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
+            <img id="construction_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
+            <div class="ct__selectWithImage-firstText">
+                <span id="construction_default_reg">{% trans region.region_name context "regions_list" %}</span>
+                <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
+                </svg>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+        <div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
             {% for region in regions %}
-            {% if forloop.counter0 == 0 %}
-			<div class="ct__selectWithImage-selected" id="construction_default_region" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
-				<img id="construction_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
-				<div class="ct__selectWithImage-firstText">
-					<span id="construction_default_reg">{% trans region.region_name context "regions_list" %}</span>
-					<svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
-					</svg>
-				</div>
-			</div>
-            {% endif %}
+            <div id="construction_{% localize off %}{{ region.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="region_storage"{% endif %} data-func="open_building" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
+                <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
+                <span class="offer_dummy_region">{% trans region.region_name context "regions_list" %}</span>
+            </div>
             {% endfor %}
-			<div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
-                {% for region in regions %}
-                <div id="construction_{% localize off %}{{ region.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="region_storage"{% endif %} data-func="open_building" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
-                    <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
-                    <span class="offer_dummy_region">{% trans region.region_name context "regions_list" %}</span>
-                </div>
-                {% endfor %}
-			</div>
-		</div>
-        {% endwith %}
+        </div>
+    </div>
+
 
     <label class="ct__wide-modal-label-select">
         {% with schemas=data|dict_key:'schemas' %}
@@ -186,4 +187,8 @@
         </svg>
         <span>предложить</span>
     </button>
+    {% else %}
+    <h3>Нет доступных регионов</h3>
+    {% endif %}
+    {% endwith %}
 </div>
