--- a/bill/templates/state/redesign/drafts/transfer_region.html
+++ b/bill/templates/state/redesign/drafts/transfer_region.html
@@ -8,6 +8,7 @@
 <div class="gover__newInner TransferRegion">
     
     {% with regions=data|dict_key:'regions' %}
+    {% if regions %}
     <div class="ct__selectWithImage">
         {% for region in regions %}
         {% if forloop.counter0 == 0 %}
@@ -31,7 +32,6 @@
             {% endfor %}
         </div>
     </div>
-    {% endwith %}
 
     {% with states=data|dict_key:'states' %}
     <div class="ct__selectWithImage">
@@ -106,4 +106,8 @@
         </svg>
         <span>предложить</span>
     </button>
+    {% else %}
+    <h3>Нет доступных регионов</h3>
+    {% endif %}
+    {% endwith %}
 </div>
