--- a/state/templates/state/redesign/gov/government.html
+++ b/state/templates/state/redesign/gov/government.html
@@ -373,7 +373,7 @@ if (mainElement && openModalBtnElement && closeModalBtnElement) {
 		<div class="gover__decorLine"></div>
 
 		{% if player.region.state %}
-		<div class="gover__content custom-scroll">
+		<div class="gover__content custom-scroll" style="min-height: 90rem;">
 			{% if parliament %}
 			<!--закнопроекты-->
 			{% bills player parliament %}
